--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script defer src="app.js" ></script>
+    
     <title>Radisa | Bogdanovic</title>
 </head>
 <body>
 
-    <header>
+    <header id="header">
         <ul class="header-ul">
             <li class=" logo-container" >
                 <a href="#top" ><img src="./img/logo.png" alt="logo-picture" class="logo-pic"></a>
@@ -114,5 +114,6 @@
 <h4 class="year-container" ></h4>
 
 </footer>
+<script  src="app.js" ></script>
 </body>
 </html>
