--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
     <form id="contact" action="https://formspree.io/f/mvolajdk" method="post" target="_blank">  
         <h2 class="form-header"> Kontaktirajte me:</h2>    
         <br>
-        <input name="name" type="text" class="feedback-input" placeholder="Unesi ime" />   
-        <input name="email" type="text" class="feedback-input" placeholder="Unesi e-mail" />
-        <textarea name="text" class="feedback-input" placeholder="Dodaj komentar"></textarea>
-        <input type="submit" value="Posalji "/>
+        <input name="name" type="text" class="feedback-input" id="name" placeholder="Unesi ime" />   
+        <input name="email" type="text" class="feedback-input" id="email" placeholder="Unesi e-mail" />
+        <textarea name="text" class="feedback-input" id="comment" placeholder="Dodaj komentar"></textarea>
+        <button class="button1" id="form-submit"  > Posalji </button>
       </form>
 </section>
 <footer>
