--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <section class="form-section" 
      >
     
-    <form  action="https://formspree.io/f/mvolajdk" method="post" target="_blank">  
+    <form id="contact1" action="https://formspree.io/f/mvolajdk" method="post" target="_blank">  
         <h2 class="form-header"> Kontaktirajte me:</h2>    
         <br>
         <input name="name" type="text" class="feedback-input" id="name" placeholder="Unesi ime" />   
