--- a/index.html
+++ b/index.html
@@ -82,10 +82,17 @@
 <section class="skills" >
     <div class='skillsCont'>
      </div>
+     
     <button class="button-left buttonSkill"> < </button>
     <button class="button-right buttonSkill"> > </button>
    
 </section>
+
+    <div class="modal-closed" id="modal">
+        <button class="modal-button">x</button>
+    </div>
+    
+
     <span id="contact"></span>
 <section class="form-section" 
      >
@@ -107,7 +114,7 @@
     <a  class="logo-social" href="https://www.instagram.com/bogdanovic.radisa/" target="_blank">
         <img class="logo-icon1" src="./img/in1.png" alt="instagram-logo">
     </a>
-    <a class="logo-social" href="https://www.linkedin.com/in/??????-??????????-2330bb202/" target="_blank">
+    <a class="logo-social" href="https://www.linkedin.com/in/radisa-bogdanovic-2330bb202/" target="_blank">
         <img  class="logo-icon" src="./img/ln1.png" alt="linkendin-logo">
     </a>
     <a class="logo-social" href="https://github.com/radisa-bogdanovic/" target="_blank">
