--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Radisa | Bogdanovic</title>
 </head>
 <body>
-
+<!-- header -->
     <header id="header">
         <ul class="header-ul">
             <li class=" logo-container" >
@@ -38,7 +38,7 @@
               <a href="#contact"  class='ham-links'>Contact me</a>
           </div>
 
-
+<!-- hero -->
 <section class="hero-section" >
    <div class="hero-text">
        <h2 class="hero-h2" >
@@ -48,7 +48,7 @@
            <button class="button1" >Go to about me </button>
        </a>
    </div>
-
+<!-- about -->
 </section>
 <span  id="about" ></span>
 <section class="about">
@@ -71,15 +71,15 @@
         </p>
         <div class="buttons-about">
             <a href="#skills" ><button class="button1"  >Pogledaj moje vestine :) </button></a>
-            <a href="https://cvdesignr.com/p/60c0a1ebcd128" target="_blank" ><button class="button1 cv-button" >Moj CV  </button></a>
+            <a href="/radisacv.pdf" target="_blank" ><button class="button1 cv-button" >Moj CV  </button></a>
         </div>
     </div>
     <div class="about-img">
     </div>
-   
+   <!-- skills -->
 </section>
 <span id="skills" ></span>
-<section class="skills" >
+<section class="skills">
     <div class='skillsCont'>
      </div>
      
@@ -90,6 +90,7 @@
         <button class="modal-button">x</button>
     </div> -->
     <span id="contact"></span>
+    <!-- form-section -->
 <section class="form-section"  >
     <form id="contact1" action="https://formspree.io/f/mvolajdk" method="post" target="_blank">  
         <h2 class="form-header"> Kontaktirajte me:</h2>    
@@ -100,6 +101,7 @@
         <button class="button1" id="form-submit"  > Posalji </button>
       </form>
 </section>
+<!-- footer -->
 <footer>
 <div class="contact-media">
     <a  class="logo-social " href="https://www.facebook.com/profile.php?id=100038746304470" target="_blank">
